[package]
name = "doson"
version = "0.1.4"
description = "Dorea Data Struct Parser"
repository = "https://github.com/doreadb/doson/"
authors = ["ZhuoEr Liu <mrxzx@qq.com>"]
license = "Apache-2.0"
keywords = ["json","parser","structure"]
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
nom = "7.0.0"
base64 = "0.13.0"
anyhow = "1.0.44"